--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -17,7 +17,7 @@
 
   <title>Finto AI</title>
 
-  <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.11.1/dist/cdn.min.js"></script>
+  <script defer src="static/js/alpine.min.js"></script>
 
   <style>
     body {
@@ -171,6 +171,7 @@
 
     .nav .active {
       background-color: white;
+      color: #002855;
     }
 
     .nav-link {
@@ -190,17 +191,19 @@
       padding: 1rem;
     }
 
-    #input-file {
+    #input-file-label {
       border: 1px solid #DFE5ED;
       border-radius: 0;
       color: #002855;
+      margin: 0;
     }
 
-    #input-file::file-selector-button {
+    #button-select-file {
       border: none;
       border-radius: 0;
       color: #002855;
       background-color: #B8C9DB;
+      margin: 0;
     }
 
     #input-url {
@@ -346,6 +349,7 @@
       border: none;
       border-radius: 0;
       font-weight: bold;
+      margin-top: 0;
     }
 
     #limit-buttons .btn-check:checked+.btn {
@@ -566,7 +570,12 @@
   </style>
 </head>
 
-<body x-data="{ annif_base_url: 'https://ai.finto.fi/v1/' }">
+<body
+  x-data="{
+    annif_base_url: 'https://ai.finto.fi/v1/', 
+    textract_base_url: 'https://ai.dev.finto.fi/textract/' 
+  }"
+>
 
   <header>
     <div class="container">
@@ -598,11 +607,18 @@
         show_results: false,
         loading_results: false,
         results: [],
+        supported_formats: ['txt', 'pdf', 'doc', 'docx', 'odt', 'rtf', 'pptx', 'epub', 'html'],
+        selected_file: 'Valitse tiedosto',
+        selected_url: '',
+        loading_upload: false,
+        show_alert_file_size: false,
+        show_alert_file_format: false,
+        show_alert_request_failed: false,
         suggest() {
           this.loading_results = true
           this.show_results = false
 
-          var lang = this.language === 'project-language' ? '' : this.language
+          let lang = this.language === 'project-language' ? '' : this.language
 
           fetch(annif_base_url + 'projects/' + this.selected_project + '/suggest', {
             method: 'POST',
@@ -621,9 +637,128 @@
             console.log(this.results)
           })
         },
-        clear_text() {
+        clear() {
           this.text = ''
           this.show_results = false
+          this.selected_file = 'Valitse tiedosto'
+          this.selected_url = ''
+          this.show_alert_file_size = false
+          this.show_alert_file_format = false
+          this.show_alert_request_failed = false
+        },
+        supported_formats_text() {
+          return this.supported_formats.map(i => '.' + i).join(', ')
+        },
+        select_file(e) {
+          this.read_file(e.target.files[0])
+        },
+        select_url(e) {
+          e.preventDefault()
+          this.read_url(e.target[0].value)
+        },
+        read_drop_input(e) {
+          e.stopPropagation()
+          e.preventDefault()
+
+          const input = e.dataTransfer
+          const files = input.files
+          const url = input.getData('URL') || input.getData('text/x-moz-url') // works with chrome and firefox
+
+          if (files && files[0]) {
+            this.$refs.tab_file_input.dispatchEvent(new Event('click')) // not sure how else to switch the tab
+            this.read_file(files[0])
+          } else if (url) {
+            this.$refs.tab_url_input.dispatchEvent(new Event('click'))
+            this.read_url(url)
+          }
+        },
+        read_file(file) {
+          this.clear()
+          this.loading_upload = true
+          this.selected_file = file.name
+          
+          const extension = this.get_extension(file.name)
+          this.check_format_support(extension)
+          this.check_file_size(file.size)
+
+          if (extension === 'txt') {
+            file.text().then(text => {
+              this.loading_upload = false
+              this.text = text
+            })
+          } else {
+            let file_form_data = new FormData()
+            file_form_data.append('file', file)
+
+            fetch(textract_base_url + 'file', {
+              method: 'POST',
+              body: file_form_data
+            })
+            .then(data => {
+              return data.json()
+            })
+            .then(data => {
+              this.loading_upload = false
+              this.text = data.text
+            })
+            .catch(error => {
+              this.loading_upload = false
+              this.show_alert_request_failed = true
+            })
+          }
+        },
+        read_url(url) {
+          const url_obj = new URL(url)
+          const plain_url = url_obj.origin + url_obj.pathname
+
+          this.clear()
+          this.loading_upload = true
+          this.selected_url = plain_url
+
+          const extension = this.get_extension(url_obj.pathname)
+          this.check_format_support(extension)
+
+          fetch(textract_base_url + 'url', {
+            method:'POST',
+            headers: {
+              'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({'url': plain_url})
+          })
+          .then(data => {
+            return data.json()
+          })
+          .then(data => {
+            this.loading_upload = false
+            this.text = data.text
+          })
+          .catch(error => {
+            this.loading_upload = false
+            this.show_alert_request_failed = true
+          })
+        },
+        get_extension(path) {
+          const parts = path.split('.')
+          if (parts.length >= 2) {
+            return parts[parts.length - 1].toLowerCase()
+          } else {
+            return
+          }
+        },
+        check_format_support(extension) {
+          // Allow undefined because url to a typical html page lacks .html suffix
+          if (!this.supported_formats.includes(extension) && extension !== undefined) {
+            this.show_alert_file_format = true
+            this.loading_upload = false
+            throw new Error('Unsupported format')
+          }
+        },
+        check_file_size(size) {
+          if (size > 50000000) {
+            this.show_alert_file_size = true
+            this.loading_upload = false
+            throw new Error('File size exceeds maximum')
+          }
         },
         copy_label_to_clipboard(term) {
           navigator.clipboard.writeText(term.label)
@@ -632,12 +767,12 @@
           navigator.clipboard.writeText(term.uri)
         },
         copy_uri_and_label_to_clipboard(term) {
-          var languageCodes = {
+          let languageCodes = {
             'fi': 'fin',
             'sv': 'swe',
             'en': 'eng'
           }
-          var term_language = 
+          let term_language = 
             this.language === 'project-language' 
             ? languageCodes[this.projects.find(p => p.project_id === this.selected_project).language] 
             : languageCodes[this.language]
@@ -661,17 +796,16 @@
 
         <div class="col-md-7" id="text-box">
           <h3>Kuvailtava teksti</h3>
-
           <div id="tabs-input">
             <ul class="nav nav-tabs-no-style nav-justified" role="tablist">
               <li class="nav-item">
                 <a class="nav-link active" href="#tab-text-input" role="tab" data-bs-toggle="tab">Syötä teksti</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#tab-file-input" role="tab" data-bs-toggle="tab">Syötä tiedosto</a>
+                <a class="nav-link" href="#tab-file-input" role="tab" data-bs-toggle="tab" x-ref="tab_file_input">Syötä tiedosto</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#tab-url-input" role="tab" data-bs-toggle="tab">Syötä URL</a>
+                <a class="nav-link" href="#tab-url-input" role="tab" data-bs-toggle="tab" x-ref="tab_url_input">Syötä URL</a>
               </li>
             </ul>
 
@@ -681,47 +815,54 @@
 
               <div role="tabpanel" class="tab-pane" id="tab-file-input">
                 <div class="input-group flex-fill">
-                  <input class="form-control" type="file" id="input-file">
+                  <label class="input-group-text" id="button-select-file" for="input-file" role="button">Selaa</label>
+                  <label for="input-file" class="form-control" id="input-file-label" role="button" x-text="selected_file"></label>
+                  <input type="file" class="d-none" id="input-file" x-on:change="select_file($event)">
                 </div>
                 <div class="tabs-input-footer">
-                  <span>Tuetut tiedostomuodot: </span><span class="supported-file-formats"></span>
+                  <span>Tuetut tiedostomuodot: </span><span x-text="supported_formats_text()"></span>
                 </div>
               </div>
 
               <div role="tabpanel" class="tab-pane" id="tab-url-input">
-                <form class="input-group flex-fill" id="form-url">
+                <form class="input-group flex-fill" id="form-url" x-on:submit="select_url($event)">
                   <input type="url" class="form-control" id="input-url" placeholder="Syötä URL" autocomplete="off"
-                    required>
+                    required x-bind:value="selected_url">
                   <input type="submit" id="button-select-url" value="Hae teksti" class="btn btn-primary">
                 </form>
                 <div class="tabs-input-footer">
-                  <span>Tuetut tiedostomuodot: </span><span class="supported-file-formats"></span>
+                  <span>Tuetut tiedostomuodot: </span><span x-text="supported_formats_text()"></span>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="alert alert-danger d-none" id="alert-not-supported-format">
+          <div class="alert alert-danger" x-cloak x-show="show_alert_file_format">
             Tämä tiedostomuoto ei ole tuettu.
           </div>
-          <div class="alert alert-danger d-none" id="alert-textract-request-failed">
+          <div class="alert alert-danger" x-cloak x-show="show_alert_request_failed">
             Tekstin haku epäonnistui.
           </div>
-          <div class="alert alert-danger d-none" id="alert-too-big-file">
+          <div class="alert alert-danger" x-cloak x-show="show_alert_file_size">
             Liian suuri tiedosto; suurin sallittu tiedoston koko on 50 MB
           </div>
 
           <div id="text-box-wrapper">
             <textarea class="form-control dropzone dropzone-border" id="text" rows="20"
-              placeholder='Kopioi tähän tekstiä ja paina "Anna aihe-ehdotukset"-nappia' x-model="text"></textarea>
-            <button id="button-clear" type="button" class="btn btn-danger" x-on:click="clear_text()">&#x1F7A8;</button>
+              placeholder='Kopioi tähän tekstiä ja paina "Anna aihe-ehdotukset"-nappia'
+              x-model="text" x-on:drop="read_drop_input($event)"></textarea>
+            <button id="button-clear" type="button" class="btn btn-danger" x-on:click="clear()">&#x1F7A8;</button>          
             
-            <div id="text-box-background" class="dropzone">
+            <div id="text-box-background" class="dropzone"
+              x-show="!loading_upload && text.length===0" x-on:drop="read_drop_input($event)">
               <img src="static/img/drop-a-file.svg" class="img" alt="Lataa tiedosto" width="50" id="upload-icon">
               <span>Voit myös pudottaa tiedoston tai URL:n tähän</span>
             </div>
-            <div id="upload-spinner" class="spinner-border" role="status">
-              <span class="visually-hidden">Loading...</span>
+
+            <div x-cloak x-show="loading_upload">
+              <div id="upload-spinner" class="spinner-border" role="status">
+                <span class="visually-hidden">Loading...</span>
+              </div>
             </div>
           </div>
         </div>
@@ -798,38 +939,6 @@
                   <p class="uri-link"><a target="_blank" x-bind:href="r.uri" x-text="r.label"></a></p>
                 </li>
               </template>
-              <!--
-              <li class="list-group-item">
-                <div id="meter-wrapper">
-                  <meter value="0.7115005254745483" max="1" title="0.7115"></meter>
-                </div>
-                <div class="btn-group copy-buttons" role="group">
-                  <button type="button" class="btn btn-secondary copy-button" id="copy-button-label"
-                    title="Kopioi termi leikepöydälle">TERMI</button>
-                  <button type="button" class="btn btn-secondary copy-button" id="copy-button-uri"
-                    title="Kopioi URI leikepöydälle">URI</button>
-                  <button type="button" class="btn btn-secondary copy-button" id="copy-button-label-and-uri"
-                    title="Kopioi termi, URI ja kielikoodi leikepöydälle Melindaa/Alephia varten"></button>
-                </div>
-                <p class="uri-link"><a target="_blank" href="http://www.yso.fi/onto/yso/p19378">Lorem ipsum dolor sit
-                    amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Sit amet tellus cras adipiscing enim eu turpis egestas</a></p>
-              </li>
-              <li class="list-group-item">
-                <div id="meter-wrapper">
-                  <meter value="0.5" max="1" title="0.5"></meter>
-                </div>
-                <div class="btn-group copy-buttons" role="group">
-                  <button type="button" class="btn btn-secondary copy-button" id="copy-button-label"
-                    title="Kopioi termi leikepöydälle">TERMI</button>
-                  <button type="button" class="btn btn-secondary copy-button" id="copy-button-uri"
-                    title="Kopioi URI leikepöydälle">URI</button>
-                  <button type="button" class="btn btn-secondary copy-button" id="copy-button-label-and-uri"
-                    title="Kopioi termi, URI ja kielikoodi leikepöydälle Melindaa/Alephia varten"></button>
-                </div>
-                <p class="uri-link"><a target="_blank" href="http://www.yso.fi/onto/yso/p19378">Kissa</a></p>
-              </li>
-              -->
             </ul>
             <ul class="list-group" id="no-results" x-show="results.length===0">
               <li class="list-group-item">Ei tuloksia</li>
