--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -341,7 +341,13 @@
       background-color: #B8C9DB;
       border: none;
       border-radius: 0;
+      width: 40px;
       font-weight: bold;
+      text-align: center;
+      margin-top: 0;
+      margin-left: 0;
+      transition: none;
+      padding: 5px 0;
     }
 
     #limit-buttons .btn-check:checked+.btn {
@@ -460,6 +466,11 @@
     .copy-button:hover {
       background-color: #B8C9DB;
       color: #002855;
+    }
+
+    .copy-button:active {
+      background-color: #B8C9DB !important;
+      color: #002855 !important;
     }
 
     #copy-button-label-and-uri {
