--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -19,561 +19,7 @@
 
   <title>Finto AI</title>
 
-  <style>
-    body {
-      font-family: 'Public Sans', sans-serif;
-      color: #002855;
-    }
-
-    /* For mobile */
-    @media screen and (max-width: 575px) {
-
-      header {
-        height: 175px !important;
-      }
-
-      #header-nav {
-        position: absolute !important;
-        top: 110px !important;
-      }
-
-      #main::before {
-        height: 400px !important;
-        background-position: 0 175px !important;
-      }
-
-      #info {
-        padding: 0 !important;
-        padding-left: 1rem !important;
-      }
-
-      #content {
-        padding: 1rem !important;
-      }
-
-      #text-box {
-        padding: 0 !important;
-        border: none !important;
-      }
-
-      #suggestions {
-        padding: 0 !important;
-        padding-top: 1rem !important;
-      }
-
-      #footer-main {
-        padding: 0 1rem !important;
-        padding-bottom: 1rem !important;
-      }
-    }
-
-    header {
-      background-color: #002855;
-      color: white;
-      padding-bottom: 1rem;
-      height: 100px;
-    }
-
-    header img {
-      width: 300px;
-      float: left;
-      position: relative;
-      top: -26px;
-      left: -45px;
-    }
-
-    #header-nav {
-      float: right;
-    }
-
-    #header-nav a {
-      color: white;
-      text-decoration: none;
-    }
-
-    #header-nav span {
-      padding-right: 1rem;
-    }
-
-    .header-nav-link {
-      background-position: left center;
-      background-repeat: no-repeat;
-      background-size: 35%;
-      padding-left: 25px;
-    }
-
-    /* what to do with hover selectors? */
-    header a:hover {
-      color: #009CC9 !important;
-    }
-
-    #header-nav-finto {
-      background-image: url("static/img/finto.svg");
-    }
-
-    #header-nav-info {
-      background-image: url("static/img/info.svg");
-    }
-
-    #header-nav-feedback {
-      background-image: url("static/img/feedback.svg");
-    }
-
-    #main {
-      padding-top: 3rem;
-      padding-bottom: 3rem;
-      min-height: 70%;
-      /* to keep footer at the bottom of the page with a bigger screen */
-      min-height: -webkit-calc(100vh - 100px - 448px);
-      /* screen height - header height - footer height */
-      min-height: -moz-calc(100vh - 100px - 448px);
-      min-height: calc(100vh - 100px - 448px);
-    }
-
-    /* cropped background image */
-    #main::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      background-image: url(./static/img/taustakuva-pexels-johannes-plenio.jpg);
-      background-repeat: no-repeat;
-      background-size: 100%;
-      background-position: 0;
-      height: 600px;
-      width: 100%;
-      z-index: -1;
-    }
-
-    #info {
-      color: white;
-      margin-bottom: 3rem;
-      padding-left: 4rem;
-    }
-
-    #content {
-      background-color: #F2F5F7;
-      padding: 4rem;
-      padding-top: 2rem;
-    }
-
-    #text-box {
-      border-right: 1px solid #DFE5ED;
-      padding-right: 2rem;
-    }
-
-    .nav {
-      background-color: #DFE5ED;
-    }
-
-    .nav .active {
-      background-color: white;
-      color: #002855;
-    }
-
-    .nav-link {
-      color: #002855;
-    }
-
-    /* what to do with hover selectors? */
-    .nav-link:hover {
-      color: #009CC9;
-    }
-
-    .tab-content {
-      background-color: white;
-    }
-
-    .input-group {
-      padding: 1rem;
-    }
-
-    #input-file-label {
-      border: 1px solid #DFE5ED;
-      border-radius: 0;
-      color: #002855;
-      margin: 0;
-    }
-
-    #button-select-file {
-      border: none;
-      border-radius: 0;
-      color: #002855;
-      background-color: #B8C9DB;
-      margin: 0;
-    }
-
-    #input-url {
-      border: 1px solid #DFE5ED;
-      border-radius: 0;
-      color: #002855;
-    }
-
-    /* Chrome, Firefox, Opera, Safari 10.1+ */
-    #input-url::placeholder {
-      color: #5D7999;
-    }
-
-    /* Internet Explorer 10-11 */
-    #input-url:-ms-input-placeholder {
-      color: #5D7999;
-    }
-
-    /* Microsoft Edge */
-    #input-url::-ms-input-placeholder {
-      color: #5D7999;
-    }
-
-    #button-select-url {
-      border: none;
-      border-radius: 0;
-      color: #002855;
-      background-color: #B8C9DB;
-    }
-
-    .tabs-input-footer {
-      margin-right: 1rem;
-      margin-left: 1rem;
-    }
-
-    #text-box-wrapper {
-      background-color: white;
-      position: relative;
-      padding: 1rem;
-    }
-
-    #text {
-      border: 1px solid #DFE5ED;
-      border-radius: 0;
-      margin-bottom: 0;
-    }
-
-    /* Chrome, Firefox, Opera, Safari 10.1+ */
-    #text::placeholder {
-      color: #5D7999;
-    }
-
-    /* Internet Explorer 10-11 */
-    #text:-ms-input-placeholder {
-      color: #5D7999;
-    }
-
-    /* Microsoft Edge */
-    #text::-ms-input-placeholder {
-      color: #5D7999;
-    }
-
-    #button-clear {
-      position: absolute;
-      top: 15px;
-      right: 15px;
-      background: none;
-      color: #5D7999;
-      border: none;
-      font-size: 30px;
-    }
-
-    .dropzone {
-      padding: 10px;
-    }
-
-    #text-box-background {
-      color: #5D7999;
-      position: absolute;
-      width: 500px;
-      max-width: 80%;
-      left: 50%;
-      top: 55%;
-      transform: translate(-50%, 0);
-      text-align: center;
-    }
-
-    #text-box-background.dragging {
-      opacity: 1.0;
-    }
-
-    #upload-spinner {
-      width: 50px;
-      height: 50px;
-      position: absolute;
-      left: 45%;
-      top: 45%;
-    }
-
-    #suggestions {
-      padding-left: 2rem;
-    }
-
-    label {
-      margin-top: 1rem;
-      margin-bottom: 1rem;
-      border-left: 6px solid #009CC9;
-      padding-left: 6px;
-      font-weight: bold;
-    }
-
-    #suggestions .form-control {
-      margin-bottom: 1rem;
-      border-radius: 0;
-      border: none;
-    }
-
-    select:valid {
-      color: #002855;
-    }
-
-    select:valid:focus {
-      color: #002855;
-    }
-
-    .select-wrapper {
-      position: relative;
-    }
-
-    .select-wrapper:after {
-      content: '﹀';
-      font-size: 20px;
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      color: #002855;
-      pointer-events: none;
-    }
-
-    #limit-buttons label {
-      color: #002855;
-      background-color: #B8C9DB;
-      border: none;
-      border-radius: 0;
-      width: 40px;
-      font-weight: bold;
-      text-align: center;
-      margin-top: 0;
-      margin-left: 0;
-      transition: none;
-      padding: 5px 0;
-    }
-
-    #limit-buttons .btn-check:checked+.btn {
-      background-color: #002855;
-      color: white;
-    }
-
-    #get-suggestions {
-      background-color: #FAE196;
-      color: #002855;
-      border: none;
-      border-radius: 0;
-      font-weight: bold;
-      margin-top: 1rem;
-    }
-
-    #results-spinner {
-      margin-top: 3rem;
-    }
-
-    #suggestions-wrapper {
-      margin-top: 3rem;
-    }
-
-    #suggestions-header {
-      margin-bottom: 1rem;
-      border-left: 6px solid #009CC9;
-      padding-left: 6px;
-      font-weight: bold;
-    }
-
-    #copy-heading {
-      float: right;
-      position: relative;
-      /* lining up with copy buttons */
-      width: 50px;
-      right: 110px;
-    }
-
-    #results {
-      margin-top: 1rem;
-    }
-
-    #results li,
-    #no-results li {
-      border-radius: 0;
-      border: none;
-      border-bottom: 1px solid #DFE5ED;
-      background: none;
-      padding-left: 0;
-      padding-right: 0;
-      justify-content: center;
-    }
-
-    /* meter styling might not be correct for all browsers */
-    #meter-wrapper {
-      float: left;
-    }
-
-    meter {
-      width: 20px;
-      height: 15px;
-      border: 1px solid #002855;
-      border-radius: 0;
-      background: none;
-    }
-
-    meter::-webkit-meter-bar {
-      width: 20px;
-      height: 15px;
-      border: 1px solid #002855;
-      border-radius: 0;
-      background: none;
-    }
-
-    meter:-moz-meter-optimum::-moz-meter-bar {
-      background: #002855;
-    }
-
-    meter::-webkit-meter-optimum-value {
-      background: #002855;
-    }
-
-    .uri-link {
-      margin: 0;
-      padding-left: 5px;
-      overflow: hidden;
-      font-weight: bold;
-      font-size: 0.9rem;
-    }
-
-    .uri-link a {
-      color: #009CC9;
-      text-decoration: underline;
-    }
-
-    .copy-buttons {
-      float: right;
-      margin: 0px;
-      padding: 0px;
-      margin-right: -5px;
-      margin-left: 0.5rem;
-    }
-
-    .copy-button {
-      border: none;
-      border-radius: 0;
-      color: #002855;
-      text-align: center;
-      font-size: 0.75rem;
-      padding: 0;
-      margin-right: 5px;
-      height: 30px;
-      width: 50px;
-      background-color: #B8C9DB;
-      /* using text for TERM and URI buttons
-      background-size: 150%;
-      background-repeat: no-repeat !important;
-      background-position: center !important;
-      */
-    }
-
-    /* what to do with hover selectors? */
-    .copy-button:hover {
-      background-color: #B8C9DB;
-      color: #002855;
-    }
-
-    .copy-button:active {
-      background-color: #B8C9DB !important;
-      color: #002855 !important;
-    }
-
-    #copy-button-label-and-uri {
-      background-image: url("static/img/melinda.svg");
-      background-size: 90%;
-      background-repeat: no-repeat !important;
-      background-position: center !important;
-      margin-left: 0px;
-    }
-
-    /* using text for TERM and URI buttons
-    #copy-button-label {
-      background-image: url("static/img/term.svg");
-      margin-left: 0px;
-    }
-    #copy-button-uri {
-      background-image: url("static/img/uri.svg");
-      margin-left: 0px;
-    }
-    */
-
-    footer {
-      background-color: #5D7999;
-      color: white;
-    }
-
-    #footer-main {
-      padding-top: 3rem;
-      padding-bottom: 3rem;
-    }
-
-    footer img {
-      width: 75%;
-      margin-bottom: 2rem;
-      position: relative;
-      left: -13px;
-    }
-
-    footer a {
-      color: white;
-      text-decoration: none;
-    }
-
-    footer h4 {
-      margin-bottom: 1.5rem;
-      font-weight: bold;
-    }
-
-    footer h5 {
-      margin-bottom: 1.5rem;
-      font-weight: bold;
-      font-size: 1rem;
-    }
-
-    #finto-email {
-      font-weight: bold;
-    }
-
-    #api-link {
-      text-decoration: underline;
-    }
-
-    #footer-links li {
-      color: white;
-      border-radius: 0;
-      border: none;
-      background: none;
-      padding-left: 0;
-      padding-top: 0;
-      padding-bottom: 0.75rem;
-    }
-
-    #footer-links>li::before {
-      content: "🡢";
-      margin-right: 0.5rem;
-    }
-
-    #twitter {
-      background-position: left center;
-      background-repeat: no-repeat;
-      background-size: 30px;
-      padding-left: 30px;
-      background-image: url("static/img/twitter.svg");
-      padding-top: 10px;
-      padding-bottom: 10px;
-    }
-
-    #footer-bottom {
-      background-color: #002855;
-      padding: 1rem;
-    }
-  </style>
+  <link rel="stylesheet" href="static/css/style.css" type="text/css">
 </head>
 
 <body>
@@ -752,231 +198,7 @@
     </div>
   </footer>
 
-  <script>
-    const { createApp } = Vue
-
-    const annif_base_url = 'https://ai.finto.fi/v1/'
-
-    const mainApp = createApp({
-      data() {
-        return {
-          projects: [],
-          selected_project: '',
-          text: '',
-          limit: 10,
-          language: 'project-language',
-          results: [],
-          show_results: false,
-          loading_results: false
-        }
-      },
-      methods: {
-        hide_results() {
-          this.show_results = false
-        },
-        suggest() {
-          this.loading_results = true
-          this.show_results = false
-
-          var lang = this.language === 'project-language' ? '' : this.language
-
-          fetch(annif_base_url + 'projects/' + this.selected_project + '/suggest', {
-            method: 'POST',
-            headers: {
-              'Content-Type': 'application/x-www-form-urlencoded'
-            },
-            body: 'text=' + this.text + '&limit=' + this.limit + '&language=' + lang
-          })
-          .then(data => {
-            return data.json()
-          })
-          .then(data => {
-            this.results = data.results
-            this.loading_results = false
-            this.show_results = true
-          })
-        }
-      },
-      mounted() {
-        fetch(annif_base_url + 'projects')
-        .then(data => {
-          return data.json()
-        })
-        .then(data => {
-          this.projects = data.projects
-          this.selected_project = this.projects[0].project_id
-        })
-      }
-    })
-
-    mainApp.component('text-input', {
-      props: ['modelValue'], // text
-      emits: ['update:modelValue', 'hide-results'],
-      methods: {
-        clear_text() {
-          this.$emit('update:modelValue', '')
-          this.$emit('hide-results', null)
-        }
-      },
-      template: `
-        <textarea
-          class="form-control dropzone dropzone-border" id="text" rows="20"
-          placeholder='Kopioi tähän tekstiä ja paina "Anna aihe-ehdotukset"-nappia'
-          :value="modelValue"
-          @input="$emit('update:modelValue', $event.target.value)"
-        ></textarea>
-        <button id="button-clear" type="button" class="btn btn-danger"
-          @click="clear_text">&#x1F7A8;</button>
-      `
-    })
-
-    mainApp.component('project-select', {
-      props: ['modelValue', 'projects'], //selected project
-      emits: ['update:modelValue'],
-      template:`
-        <label for="project">Sanasto ja tekstin kieli</label>
-        <div class="select-wrapper">
-          <select
-            class="form-control" id="project"
-            :value="modelValue"
-            @change="$emit('update:modelValue', $event.target.value)"
-          >
-            <option
-              v-for="p in projects"
-              :value="p.project_id"
-            >{{ p.name }}</option>
-          </select>
-        </div>
-      `
-    })
-
-    mainApp.component('limit-input', {
-      props: ['modelValue'], // limit
-      emits: ['update:modelValue'],
-      template: `
-        <label for="limit-buttons">Ehdotusten enimmäismäärä</label><br>
-        <div id="limit-buttons" role="group" class="btn-group">
-          <input type="radio" class="btn-check" name="limit" id="l1" checked
-            :value="modelValue"
-            @change="$emit('update:modelValue', 10)"
-          >
-          <label class="btn btn-secondary" for="l1">10</label>
-          <input type="radio" class="btn-check" name="limit" id="l2"
-            :value="modelValue"
-            @change="$emit('update:modelValue', 15)" 
-          >
-          <label class="btn btn-secondary" for="l2">15</label>
-          <input type="radio" class="btn-check" name="limit" id="l3"
-            :value="modelValue"
-            @change="$emit('update:modelValue', 20)" 
-          >
-          <label class="btn btn-secondary" for="l3">20</label>
-        </div>
-      `
-    })
-
-    mainApp.component('language-select', {
-      props: ['modelValue'], // selected language
-      emits: ['update:modelValue'],
-      template:`
-        <label for="label-language">Aihe-ehdotusten kieli</label>
-        <div class="select-wrapper">
-          <select class="form-control" id="label-language"
-            :value="modelValue"
-            @change="$emit('update:modelValue', $event.target.value)"
-          >
-            <option value="project-language">Sama kuin tekstin kieli</option>
-            <option value="fi">suomi</option>
-            <option value="sv">ruotsi</option>
-            <option value="en">englanti</option>
-          </select>
-        </div>
-      `
-    })
-
-    mainApp.component('result-list', {
-      props: ['results', 'language', 'selected_project', 'projects'],
-      methods: {
-        copy_label_to_clipboard(term) {
-          navigator.clipboard.writeText(term.label)
-        },
-        copy_uri_to_clipboard(term) {
-          navigator.clipboard.writeText(term.uri)
-        },
-        copy_uri_and_label_to_clipboard(term) {
-          var languageCodes = {
-            'fi': 'fin',
-            'sv': 'swe',
-            'en': 'eng'
-          }
-          var term_language = 
-            this.language === 'project-language' 
-            ? languageCodes[this.projects.find(p => p.project_id === this.selected_project).language] 
-            : languageCodes[this.language]
-          navigator.clipboard.writeText(term.label + '$$2' + 'yso/' + term_language + '$$0'+ term.uri + '\n')
-        }
-      },
-      template: `
-        <ul class="list-group" id="results" v-if="results.length!==0">
-          <li
-            class="list-group-item"
-            v-for="r in results"
-          >
-            <div id="meter-wrapper">
-              <meter
-                max="1" title="0.7115"
-                v-bind:value="r.score"
-                v-bind:title="r.score.toString().slice(0,6)"  
-              ></meter>
-            </div>
-            <div class="btn-group copy-buttons" role="group">
-              <button
-                type="button" class="btn btn-secondary copy-button" id="copy-button-label" title="Kopioi termi leikepöydälle"
-                @click="copy_label_to_clipboard(r)"
-              >TERMI</button>
-              <button
-                type="button" class="btn btn-secondary copy-button" id="copy-button-uri" title="Kopioi URI leikepöydälle"
-                @click="copy_uri_to_clipboard(r)"
-              >URI</button>
-              <button
-                type="button" class="btn btn-secondary copy-button" id="copy-button-label-and-uri"
-                title="Kopioi termi, URI ja kielikoodi leikepöydälle Melindaa/Alephia varten"
-                @click="copy_uri_and_label_to_clipboard(r)"  
-              ></button>
-            </div>
-            <p class="uri-link"><a target="_blank" v-bind:href="r.uri">{{ r.label }}</a></p>
-          </li>
-        </ul>
-        <ul class="list-group" id="no-results" v-if="results.length===0">
-          <li class="list-group-item">Ei tuloksia</li>
-        </ul>
-      `
-    })
-
-    mainApp.mount('#main')
-
-
-    const footerApp = createApp({
-      data() {
-        return {
-          annif_version: ''
-        }
-      },
-      mounted() {
-        fetch(annif_base_url)
-        .then(data => {
-          return data.json()
-        })
-        .then(data => {
-          this.annif_version = data.version
-        })
-      }
-    })
-
-    footerApp.mount('#footer-main')
-
-  </script>
-
+  <script src="static/js/annif.js"></script>
   <script src="static/js/bootstrap.min.js"></script>
 
 </body>
